--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <!-- Bên trái: Thông tin cá nhân -->
     <div class="left">
       <div class="profile">
-	  <img src="https://scontent.fvca1-1.fna.fbcdn.net/v/t39.30808-6/469066950_994797982484033_5091434301587319880_n.jpg?stp=dst-jpg_p526x296_tt6&_nc_cat=102&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeEV7K9HHrRzrQ4o4vrhKE-Qb0v6EV34um5vS_oRXfi6bvJFA0M6yFg0orEVG0hRFXavSLF2NhjDBPDk5nCu2sqe&_nc_ohc=McvTmZzLNBkQ7kNvgFHZDeO&_nc_zt=23&_nc_ht=scontent.fvca1-1.fna&_nc_gid=AzJOQ5orUG29rwD8d6mvXMZ&oh=00_AYC2g-Ln-kBxGTdDLFeufTshqBm7zURsh0NtJUqB-OJ1Kg&oe=6754DDE8" alt="Ảnh cá nhân">  
+	  <img src="https://i.ibb.co/ypMLZRG/z6191205100567-91cddf9b7df407c21bea8b0b94c4d7e7.jpg" alt="Ảnh cá nhân">  
       <h1 style="color:red"> Trần Thanh Bảo</h1>
         <p>Ngày sinh: 23/11/2007</p>
         <p>Email:tranthanhbao231907@gmail.com</p>
